@@ -298,11 +298,13 @@ Buffer *pcp_export_c_pub(pcp_key_t *sk);
 */
 Buffer *pcp_export_secret(pcp_key_t *sk, char *passphrase);
 
-pcp_ks_bundle_t *pcp_import_pub(byte *raw, size_t rawsize);
+pcp_ks_bundle_t *pcp_import_binpub(byte *raw, size_t rawsize);
+pcp_ks_bundle_t *pcp_import_pub(byte *raw, size_t rawsize); /* FIXME: deprecate */
 pcp_ks_bundle_t *pcp_import_pub_rfc(Buffer *blob);
 pcp_ks_bundle_t *pcp_import_pub_pbp(Buffer *blob);
 
 /* import secret key */
+pcp_key_t *pcp_import_binsecret(byte *raw, size_t rawsize, char *passphrase);
 pcp_key_t *pcp_import_secret(byte *raw, size_t rawsize, char *passphrase);
 pcp_key_t *pcp_import_secret_native(Buffer *cipher, char *passphrase);
 
