@@ -39,9 +39,8 @@ They've to exchange the public key somehow (which is not my
 problem at the moment, use ssh, encrypted mail, whatever). Once exchanged,
 they have to import it:
 
-
  Alicia                             Bobby
- pcp1 -P -I bobby.pub               pcp1 -P -I alicia.pub
+ pcp1 -K -I bobby.pub               pcp1 -K -I alicia.pub
 
 They will see a response as this when done:
 
