@@ -54,8 +54,8 @@
 #define PCP_MODE_LISTKEYS      0x00000004
 #define PCP_MODE_EXPORT_SECRET 0x00000009
 #define PCP_MODE_EXPORT_PUBLIC 0x00000011
-#define PCP_MODE_IMPORT_SECRET 0x00000020
-#define PCP_MODE_IMPORT_PUBLIC 0x00000038
+#define PCP_MODE_IMPORT        0x00000020
+#define PCP_MODE_ENCRYPT_ME    0x00000038
 #define PCP_MODE_DELETE_KEY    0x00000061
 #define PCP_MODE_TEXT          0x000000A6
 #define PCP_MODE_EDIT          0x0000011D
@@ -66,7 +66,6 @@
 #define PCP_MODE_SIGN          0x00000FF6
 #define PCP_MODE_VERIFY        0x00001B25
 #define PCP_MODE_YAML          0x00002E27
-#define PCP_MODE_ENCRYPT_ME    0x00004E77
 
 /*
 0x00001B25
