@@ -142,7 +142,7 @@ dxmorg@florida.cops.gov
 </test>
 
 <test check-import-public-key>
-  cmd = $pcp -V $vault -P -I bart.pub
+  cmd = $pcp -V $vault -K -I bart.pub
   expect = /key $bartid added/
 </test>
 
@@ -197,12 +197,12 @@ temporarily disabled
   # alicias part
   prepare = echo ${md5msg} > testmessage
   <test check-crypto-alicia-import-secret>
-    cmd = $pcp -V va -S -I key-alicia-sec -x a
+    cmd = $pcp -V va -K -I key-alicia-sec -x a
     expect = /${idalicia}/
   </test>
 
   <test check-crypto-alicia-import-bobbys-key>
-    cmd = $pcp -V va -P -I key-bobby-pub
+    cmd = $pcp -V va -K -I key-bobby-pub
     expect = /${idbobby}/
   </test>
 
@@ -215,12 +215,12 @@ temporarily disabled
 <test check-crypto-bobby-init>
   # bobbys part
   <test check-crypto-bobby-import-secret>
-    cmd = $pcp -V vb -S -I key-bobby-sec -x b
+    cmd = $pcp -V vb -K -I key-bobby-sec -x b
     expect = /${idbobby}/
   </test>
 
   <test check-crypto-alicia-import-alicias-key>
-    cmd = $pcp -V vb -P -I key-alicia-pub
+    cmd = $pcp -V vb -K -I key-alicia-pub
     expect = /${idalicia}/
   </test>
 
@@ -262,7 +262,7 @@ temporarily disabled
   </test>
 
   <test check-vcl-prepare-import-bpub>
-    cmd = $pcp -V vcl -I key-bobby-pub -P
+    cmd = $pcp -V vcl -I key-bobby-pub -K
     expect = /added/
   </test>
 
@@ -272,12 +272,12 @@ temporarily disabled
   </test>
 
   <test check-vcl-import-bsecret>
-    cmd = $pcp -V vb2 -S -I key-bobby-sec -x b
+    cmd = $pcp -V vb2 -K -I key-bobby-sec -x b
     expect = /${idbobby}/
   </test>
 
   <test check-vcl-import-unencrypted-pubkey>
-    cmd =  $pcp -V vb2 -P -I testkeyvcl
+    cmd =  $pcp -V vb2 -K -I testkeyvcl
     expect = /added/
   </test>
 
@@ -350,12 +350,12 @@ temporarily disabled
 #
 # negative tests, check for error handling
 <test check-if-catch-conflicting-params>
-  cmd = $pcp -V $vault -S -P
+  cmd = $pcp -V $vault -K -K
   expect = /invalid combination of commandline parameters/
 </test>
 
 <test check-infile-error>
-  cmd = $pcp -V $vault -I nonexist -P
+  cmd = $pcp -V $vault -I nonexist -K
   expect = /Could not open input file nonexist/
 </test>
 
@@ -414,7 +414,7 @@ temporarily disabled
 </test>
 
 <test check-if-export-public-catch-outfile-error>
-  prepare = $pcp -V $vault -P -I bart.pub
+  prepare = $pcp -V $vault -K -I bart.pub
   cmd =  $pcp -V $vault -l | grep public | cut -d ' ' -f 1 \
          | tail -1 | xargs $pcp -V $vault -p -O nonexistentdir/keyfile
   expect = /Could not create output file nonexistentdir/
@@ -422,13 +422,13 @@ temporarily disabled
 
 <test check-if-catch-empty-input>
   prepare = touch testfile-empty
-  cmd = $pcp -V $vault -P -I testfile-empty
+  cmd = $pcp -V $vault -K -I testfile-empty
   expect = /file is empty/
 </test>
 
 <test check-if-catch-missing-newlines>
   prepare = perl -e 'print "X" x 5000; print "\n"' > testfile-toolong
-  cmd = $pcp -V $vault -P -I testfile-toolong
+  cmd = $pcp -V $vault -K -I testfile-toolong -x x
   expect = /failed/
 </test>
 
@@ -439,7 +439,7 @@ temporarily disabled
 <test check-if-catch-invalid-z85>
   prepare = ./jot 30 | while read ignore; do \
             echo XXXXXXXXXXXXXXXXXX; done > testfile-noz85
-  cmd = $pcp -V $vault -P -I testfile-noz85
+  cmd = $pcp -V $vault -K -I testfile-noz85
   expect = /could not decode input/
 </test>
 */
@@ -447,17 +447,12 @@ temporarily disabled
 <test check-if-catch-nokey-behind-z85>
   prepare = ./jot 30 | while read ignore; do echo XXXXX; done \
             | $pcp -z > testfile-nokey
-  cmd = $pcp -V $vault -P -I testfile-nokey
-  expect = /failed/
-</test>
-
-<test check-if-sanity-catch-nosecret>
-  cmd = $pcp -V $vault -S -I bart.pub -x a
+  cmd = $pcp -V $vault -K -I testfile-nokey -x x
   expect = /failed/
 </test>
 
 <test check-if-sanity-catch-keyexists>
-  cmd = $pcp -V $vault -P -I bart.pub
+  cmd = $pcp -V $vault -K -I bart.pub
   expect = /there already exists a key/
 </test>
 
@@ -471,26 +466,26 @@ temporarily disabled
   prepare = ./invalidkeys
 
 <test check-testkey-wrong-version>
-  cmd = $pcp -V $vault -S -I testkey-wrong-version -x xxx
+  cmd = $pcp -V $vault -K -I testkey-wrong-version -x xxx
   expect = /unknown key version/
 </test>
 
 <test check-testkey-wrong-serial>
-  cmd = $pcp -V $vault -S -I testkey-wrong-serial -x xxx
+  cmd = $pcp -V $vault -K -I testkey-wrong-serial -x xxx
   expect = /invalid serial number/
 </test>
 <test check-testkey-wrong-ctime>
-  cmd = $pcp -V $vault -S -I testkey-invalid-ctime -x xxx
+  cmd = $pcp -V $vault -K -I testkey-invalid-ctime -x xxx
   expect = /invalid creation timestamp/
 </test>
 /*
 <test check-testpubkey-wrong-type>
-  cmd = $pcp -V $vault -P -I testpubkey-wrong-type
+  cmd = $pcp -V $vault -K -I testpubkey-wrong-type
   expect = /key type is not PUBLIC/
 </test>
 
 <test check-testpubkey-wrong-version>
-  cmd = $pcp -V $vault -P -I testpubkey-wrong-version
+  cmd = $pcp -V $vault -K -I testpubkey-wrong-version
   expect = /unknown key version/
 </test>
 */
